# wngtools

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  astro.config.mjs  eslint.config.js  not_to_do.md  package-lock.json  package.json
.github/workflows/: build-linux.yml  build.yml
locales/: en.json  zh-CN.json  zh-HK.json  zh-TW.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  filespace.json  note.json
src-tauri/icons/: icon.icns
src-tauri/src/: easynotification.rs  lib.rs  main_window_handlers.rs
src-tauri/src/commands/: clipboard.rs  get_version.rs  locale.rs  mod.rs  open_path.rs  opengithub.rs  save_note.rs  show_window.rs
src-tauri/src/types/: files.rs
src/assets/icons/: LICENSE.md
src/components/: files.vue
src/components/about/: About.vue
src/components/files/: addClipboard.ts  dragHandler.ts  files.vue  iconMap.ts
src/components/notes/: notes.vue
src/components/script/: iconMap.ts
src/components/script/files/: dragHandler.ts  iconMap.ts
src/components/utils/: addClipboard.ts  dragHandler.ts  iconMap.ts
src/i18n/: index.ts
src/layouts/: Layout.astro
src/pages/: abouts.astro  filespace.astro  index.astro  note.astro
src/script/: autostart.ts  filespace.ts  main.ts  quitItem.ts  quiteItem.ts  restart.ts
src/trayitems/: about.ts  autostart.ts  filespace.ts  main.ts  note.ts  quitItem.ts  restart.ts
src/types/: auto-imports.d.ts  components.d.ts  file.ts
