[package]
name = "wngtools"
version = "0.1.0"
description = "A Tauri App"
authors = ["xingwangzhe"]
license = "GPL-3.0"
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "z" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。
rpath = false # 避免硬编码库路径以减小大小。
debug = false # 禁用调试信息
debug-assertions = false # 禁用调试断言
overflow-checks = false # 禁用溢出检查





[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_off"] }
tauri = { version = "2.8.3", features = [ "tray-icon"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-persisted-scope = "2.0.0"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
image = "0.25"
tauri-plugin-dialog = "2"
rust-i18n = "3.1.5"
lazy_static = "1.4"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2.5.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
